--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Movie-related project. offering a wide array of trending, top-rated, upcoming, and popular movies. Users can explore an extensive collection of both movies and TV shows, with the ability to search by genre for a more tailored experience. Whether you're looking for the latest hits or planning ahead for upcoming releases, TOTOS provides everything you need in one intuitive and sleek platform. The powerful search functionality ensures users can easily find titles based on their preferences, making it simple to explore the world of entertainment."
+    />
     <title>TOTOS</title>
   </head>
   <body>
